# schrodinger-mcp

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml
src/schrodinger_mcp/: __init__.py  _supervisor.py  config.py  errors.py  installation.py  jobs.py  platformutil.py  runner.py  server.py
src/schrodinger_mcp/tools/: __init__.py  _async.py  _common.py  docking.py  foundation.py  jobs_api.py  prep.py  properties.py  qm.py  viz.py
src/schrodinger_mcp/workers/: _wio.py  centroid.py  export_3d.py  export_render.py  interactions.py  jaguar_input.py  smiles_to_3d.py  split_merge.py  structure_info.py  summarize_docking.py
tests/: manual_docking_e2e.py  manual_remaining.py  manual_wave5.py  test_smoke.py  test_unit.py
